<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/toolbar_bg"
        android:elevation="30dp"
        app:title=" ">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/baseline_edit_24"
                app:tint="@color/black" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/getProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:shapeAppearanceOverlay="@style/CircularImage" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:src="@drawable/profile" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alegreya_sc"
                            android:gravity="center"
                            android:text="@string/profile"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/myShop"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:src="@drawable/languages" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alegreya_sc"
                            android:gravity="center"
                            android:text="@string/select_your_language"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/videoTutorial"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/health"
                            app:shapeAppearance="@style/CircularImage" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alegreya_sc"
                            android:gravity="center"
                            android:text="@string/retrieve_your_pdf"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>